tests/NormalTests/paczka1/fuzzy1/92490044.err
Error in line 28: qPh8CGhOqJs A350 ยก9,3
Error in line 26: qMa1 S337 27,2
Error in line 24: S337 A350 21,7
